<resources>
    <string name="app_name">Swapi App</string>

    <!-- TOP AND SIDE NAVIGATION BARS -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Swapi App</string>
    <string name="nav_header_subtitle">applicant@philo.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_people">People</string>
    <string name="menu_planet">Planets</string>
    <string name="menu_species">Species</string>
    <string name="menu_people_details">Character Details</string>
    <string name="menu_planet_details">Planet Details</string>
    <string name="menu_starship_details">Starship Details</string>
    <string name="menu_species_details">Species Details</string>

    <!-- COMMON -->
    <string name="string_details_unknown">unknown</string>
    <string name="string_question_marks">\???</string>

    <!-- PEOPLE/PLANET LIST PAGES -->
    <string name="button_search">SEARCH</string>
    <string name="button_previous">PREVIOUS</string>
    <string name="button_next">NEXT</string>
    <string name="list_title">Results:</string>

    <!-- COMMON DETAILS -->
    <string name="details_homeworld">Homeworld:</string>
    <string name="details_skin_color">Skin Color:</string>
    <string name="details_eye_color">Eye Color:</string>
    <string name="details_hair_color">Hair Color:</string>

    <!-- PEOPLE DETAILS PAGE -->
    <string name="people_details_birth_year">Birth Year:</string>
    <string name="people_details_gender">Gender:</string>
    <string name="people_details_height">Height:</string>
    <string name="people_details_mass">Mass:</string>
    <string name="people_details_species">Species:</string>
    <string name="people_details_starships">Starships</string>
    <string name="people_details_vehicles">Vehicles:</string>
    <string name="people_details_films">Films:</string>
    <string name="people_details_species_Human">Human</string>

    <!-- PLANET DETAILS PAGE -->
    <string name="people_details_population">Population:</string>
    <string name="people_details_rotation">Rotation:</string>
    <string name="people_details_orbit">Orbit:</string>
    <string name="people_details_diameter">Diameter:</string>
    <string name="people_details_gravity">Gravity:</string>
    <string name="people_details_water">Water :</string>
    <string name="people_details_climate">Climate(s):</string>
    <string name="people_details_terrain">Terrain(s):</string>
    <string name="people_details_residents">Resident(s):</string>

    <!-- SPECIES DETAILS PAGE -->
    <string name="species_details_classification">Classification:</string>
    <string name="species_details_designation">Designation:</string>
    <string name="species_details_lifespan">Lifespan:</string>
    <string name="people_details_avg_height">Avg height:</string>
    <string name="species_details_language">Language:</string>
    <string name="species_details_people">People:</string>

    <!-- STARSHIP DETAILS PAGE -->
    <string name="people_details_mglt">MGLT:</string>
    <string name="people_details_passengers">Passengers:</string>
    <string name="people_details_crew">Crew:</string>
    <string name="people_details_length">Length:</string>
    <string name="people_details_hyperdrive">Hyperdrive:</string>
    <string name="people_details_consumables">Consumables :</string>
    <string name="people_details_cost">Cost:</string>
    <string name="people_details_speed">Speed in atmosphere:</string>
    <string name="people_details_cargo">Cargo:</string>
    <string name="people_details_manufacturer">Manufacturer:</string>
    <string name="people_details_class">Class:</string>
    <string name="people_details_pilots">Pilot(s):</string>

    <!-- ERRORS -->
    <string name="people_list_error">Error while loading characters</string>
    <string name="planet_list_error">Error while loading planets</string>
    <string name="details_species_error">Error while loading species info</string>
    <string name="details_homeworld_error">Error while loading homeworld info</string>
    <string name="switch_cache">Data caching</string>

</resources>